# lodetta

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: restore-database.yml
database/: Dockerfile  populate.py  supported_logos.txt
deployment/: docker-compose-db.yaml  docker-compose.yaml
src/api/: app.py
src/api/data_access/dao/: logo_dao.py
src/api/data_access/data_sources/: data_source.py  data_source_factory.py  gdrive_data_source.py  url_data_source.py
src/api/database/: populate.py  utils.py
src/api/domain/models/: __init__.py  bbox_model.py  detect_request_model.py  error_response_model.py  image_model.py  logo_model.py  prediction_model.py  response_model.py  weights_import_model.py
src/api/domain/services/: detector_service.py  logo_service.py
src/api/extensions/: google_drive.py  mongo_logger.py  utils.py
src/api/routers/: __init__.py  detector_route.py  logo_route.py
